Fix Android URL encoder compatibility